# lemin_parse

./: .gitmodules  1_map.txt  21_map.docx  CMakeLists.txt  Makefile  author  lem-in
include/: lem_in.h
libft/: Makefile
libft/include/: ft_array.h  ft_printf.h  get_next_line.h  libft.h
libft/src/ft_array/: ft_array_add.c  ft_array_clear.c  ft_array_insert.c  ft_array_pop.c  ft_array_print.c  ft_array_reserve.c  ft_array_resize.c
libft/src/ft_is/: ft_atoi.c  ft_isint.c  ft_isnumber.c
libft/src/ft_mem/: ft_memcpy.c
libft/src/ft_printf/: display.c  float.c  float_and_decimal.c  float_utility.c  ft_printf.c  get_numbers.c  search_flags.c  string_and_hexadecimal.c  upper_type.c  utility.c
libft/src/ft_str/: ft_clear_table.c  ft_strdup.c  ft_strsort.c  ft_strsplit.c  ft_tablen.c  ft_wordcounter.c  get_next_line.c
maps/: big_fucking_map.map  flow_one.map  flow_ten.map  flow_thousand.map  very_big.map
src/: check_rooms_and_links.c  coord.c  free.c  links.c  main.c  parse.c  path_finding.c  pathfinder.c  pathtinder.c  result_commands.c  rooms.c  route.c  utilities_1.c  utilities_2.c
