cmake_minimum_required(VERSION 3.14)
project(lemin_parse C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(libft/include)

add_executable(lemin_parse
        include/lem_in.h
        libft/include/ft_array.h
        libft/include/ft_printf.h
        libft/include/get_next_line.h
        libft/include/libft.h
        libft/src/ft_array/ft_array_add.c
        libft/src/ft_array/ft_array_clear.c
        libft/src/ft_array/ft_array_insert.c
        libft/src/ft_array/ft_array_pop.c
        libft/src/ft_array/ft_array_print.c
        libft/src/ft_array/ft_array_reserve.c
        libft/src/ft_array/ft_array_resize.c
        libft/src/ft_is/ft_isalnum.c
        libft/src/ft_is/ft_isalpha.c
        libft/src/ft_is/ft_isascii.c
        libft/src/ft_is/ft_isdigit.c
        libft/src/ft_is/ft_isprint.c
        libft/src/ft_is/ft_isspace.c
        libft/src/ft_lst/ft_clear_list.c
        libft/src/ft_lst/ft_list_len.c
        libft/src/ft_lst/ft_lstadd.c
        libft/src/ft_lst/ft_lstdel.c
        libft/src/ft_lst/ft_lstdelone.c
        libft/src/ft_lst/ft_lstiter.c
        libft/src/ft_lst/ft_lstmap.c
        libft/src/ft_lst/ft_lstnew.c
        libft/src/ft_lst/ft_lstpushback.c
        libft/src/ft_mem/ft_bzero.c
        libft/src/ft_mem/ft_memalloc.c
        libft/src/ft_mem/ft_memccpy.c
        libft/src/ft_mem/ft_memchr.c
        libft/src/ft_mem/ft_memcmp.c
        libft/src/ft_mem/ft_memcpy.c
        libft/src/ft_mem/ft_memdel.c
        libft/src/ft_mem/ft_memmove.c
        libft/src/ft_mem/ft_memset.c
        libft/src/ft_printf/display.c
        libft/src/ft_printf/float.c
        libft/src/ft_printf/float_and_decimal.c
        libft/src/ft_printf/float_utility.c
        libft/src/ft_printf/ft_printf.c
        libft/src/ft_printf/get_numbers.c
        libft/src/ft_printf/search_flags.c
        libft/src/ft_printf/string_and_hexadecimal.c
        libft/src/ft_printf/upper_type.c
        libft/src/ft_printf/utility.c
        libft/src/ft_put/ft_putchar.c
        libft/src/ft_put/ft_putchar_fd.c
        libft/src/ft_put/ft_putendl.c
        libft/src/ft_put/ft_putendl_fd.c
        libft/src/ft_put/ft_putnbr.c
        libft/src/ft_put/ft_putnbr_fd.c
        libft/src/ft_str/ft_atoi.c
        libft/src/ft_str/ft_clear_table.c
        libft/src/ft_str/ft_itoa.c
        libft/src/ft_str/ft_putstr.c
        libft/src/ft_str/ft_putstr_fd.c
        libft/src/ft_str/ft_strcat.c
        libft/src/ft_str/ft_strchr.c
        libft/src/ft_str/ft_strclr.c
        libft/src/ft_str/ft_strcmp.c
        libft/src/ft_str/ft_strcpy.c
        libft/src/ft_str/ft_strdel.c
        libft/src/ft_str/ft_strdup.c
        libft/src/ft_str/ft_strequ.c
        libft/src/ft_str/ft_striter.c
        libft/src/ft_str/ft_striteri.c
        libft/src/ft_str/ft_strjoin.c
        libft/src/ft_str/ft_strlcat.c
        libft/src/ft_str/ft_strlen.c
        libft/src/ft_str/ft_strmap.c
        libft/src/ft_str/ft_strmapi.c
        libft/src/ft_str/ft_strncat.c
        libft/src/ft_str/ft_strncmp.c
        libft/src/ft_str/ft_strncpy.c
        libft/src/ft_str/ft_strnequ.c
        libft/src/ft_str/ft_strnew.c
        libft/src/ft_str/ft_strnstr.c
        libft/src/ft_str/ft_strrchr.c
        libft/src/ft_str/ft_strsort.c
        libft/src/ft_str/ft_strsplit.c
        libft/src/ft_str/ft_strstr.c
        libft/src/ft_str/ft_strsub.c
        libft/src/ft_str/ft_strtrim.c
        libft/src/ft_str/ft_tolower.c
        libft/src/ft_str/ft_toupper.c
        libft/src/ft_str/ft_wordcounter.c
        libft/src/ft_str/get_next_line.c
        src/main.c
        src/parse.c
        src/utilities_1.c src/links.c)
